Removing cover from show images to avoid auto cropping.

--- a/wp-content/themes/koop/css/src/_program.css
+++ b/wp-content/themes/koop/css/src/_program.css
@@ -28,7 +28,7 @@
 .program-box img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 
 .program-box h3 {
